<resources>

    <string name="app_name">Clear Mind</string>
    <string name="accepts">Accepts: This tool is useful for Distracting. Here is the acronym for the phrase Wise Mind ACCEPTS. Click on each letter to reveal tips and tricks for distracting. Use this tool to momentarily escape distress and return to the situation with a better mindset.</string>
    <string name="activities">Activities: Make a list of activities you can do. Here are some examples: Focus attention on a task you need to get done. Do some gardening. Repeat affirmations. Watch tv. Clean a room in your house. Find an event to go to. Play computer games. Collect things. Take a bath. Go walking or jogging. Surf the Internet. Write emails. Play sports. Play an instrument. Go out for a meal or eat your favorite food. Call or go out with a friend. Listen to music. Build something. Play cards. Read Magazines, books, or comics. Do crossword puzzles or Sudoku. Plan or create a to do list. Go somewhere with a view. Go for a drive. Care for a pet. Meditate. Do some exercise. Dress nicely. Do something nice for someone.</string>
    <string name="contributing">Contributing: Find volunteer work to do. Help a friend or family member. Surprise someone with something nice. Give away things you don\'t need. Call or send an instant message encouraging someone or just saying hi. Make something nice for someone else. Do something thoughtful. This can help you feel better and improve your mood.</string>
    <string name="comparisons">Comparisons: Compare how you are feeling now to a time when you felt different. Think about people coping the same as you or less well than you. Think back a few years. Whatever works for you.</string>
    <string name="emotions">Emotions: Read emotional books, stories, or old letters. Watch emotional movies. Listen to emotional music. Try scary movies, joke books, comedies, or funny records. Create a playlist and listen to it depending on your mood. Read funny greeting cards. Any event that creates different emotions is helpful.</string>
    <string name="pushing">Pushing: Push the situation away by leaving it for a while. Leave the situation mentally. Build an imaginary wall between yourself and the situation. Block thoughts and images from your mind. Yell NO. Refuse to think about the painful situation. Put the pain on a shelf, box it up, and put it away. Deny the problem for the moment. Remember these do not resolve the situation, they help return to the problem with a clear mind.</string>
    <string name="thoughts">Thoughts: Try counting to 10. Try counting the colors in a painting, poster, or out the window; count anything. Repeat words to a song in your mind. Solve puzzles. Watch tv or read. Name objects in a room.</string>
    <string name="sensations">Sensations: Squeeze a rubber ball very hard. Listen to very loud music. Hold ice in your hand or mouth. Go out in the rain or snow. Take a hot or cold shower. Eat a sour candy.</string>
    <string name="hulahoop">Locus of Control. This tool helps us remember to focus on what is within our control; Your thoughts, feelings, and actions are within your control while others thoughts, feelings, and actions are not. Locus is a particular position, point, or place.</string>
    <string name="abcde">This tool can be used to deal with urges or emotional upsets.</string>
    <string name="activating">A. What happened?</string>
    <string name="belief">B. What irrational thought could I be telling <br /> myself about what happened? ex. awfulizing, frustration, etc</string>
    <string name="consequence">C. How does the irrational belief make me feel? ex. mad, sad, anxiety, shame, avoidance, etc</string>
    <string name="dispute">D. Turn your irrational belief into a question. Ex. Am I really.. Do I have proof of…? </string>
    <string name="effect">E. The goal is rational thought and moderate emotions. ex. This problem wont last forever, etc.</string>
    <string name="activating_event">&#160;Activating event:&#160;</string>
    <string name="belief_about_event_irrational">&#160;Belief about the event (irrational):&#160;</string>
    <string name="consequence_of_irrational_belief">&#160;Consequence of irrational belief:&#160;</string>
    <string name="dispute_my_irrational_belief">&#160;Dispute my irrational belief:&#160;</string>
    <string name="effective_change_in_my_thinking">&#160;Effective change in my thinking:&#160;</string>
    <string name="try_it_on_your_own_practice_here">Try it on your own. Practice here.</string>
    <string name="wise_mind_accepts">  &#160; Wise Mind ACCEPTS &#160;  </string>
    <string name="hula_hoop">Hula Hoop</string>
    <string name="abcde_button">ABCDE</string>
    <string name="activities_button">Activities</string>
    <string name="contributing_button">&#160;Contributing&#160;</string>
    <string name="comparisons_button">&#160;Comparisons&#160;</string>
    <string name="emotions_button">Emotions</string>
    <string name="pushing_away_button">&#160;Pushing Away&#160;</string>
    <string name="thoughts_button">Thoughts</string>
    <string name="sensations_button">Sensations</string>
    <string name="tools">Tools</string>
    <string name="about">About</string>
    <string name="toast1">"You can breath along to help clear your mind!"</string>
    <string name="quickstart">Quick Start</string>
    <string name="quickstart_input_text">Enter a few activities one at a time</string>
    <string name="quickstart_text">If you are having trouble getting started or are dealing with an urge or emotional upset prepare this tool so it can quickly pick an activity for you. It is also known as an urge jar. Create a list by tapping on + then give your list a title. Add a few \"go to\" activities that are most helpful and tap on roll whenever you need direction. After completing an activity you can check off or delete by tapping on it and selecting on the menu.</string>
    <string name="roll">Roll</string>
    <string name="enter">Enter</string>
    <string name="about2">Made by UCSD Graduate in Cognitive Science with specialization in Neuroscience Jeffrey</string>
    <string name="about1">You can breathe along with Marimon!</string>
    <string name="pomodoroText">A countdown of 25 minutes will start. Use this tool to focus on one task for a period of time before taking a break to reset. Remember that urges and emotional upsets have time limits. This tool can be used to outlast either.</string>
    <string name="ActivatingEvent">Activating Event</string>
    <string name="accepts_button">Accepts</string>
    <string name="abcdeexplanation">Write your responses in the grey areas. This tool can be used to deal with urges or emotional upsets. Save and view your entries by using the buttons below.</string>
    <string name="list1">1st List</string>
    <string name="list2">2nd List</string>
    <string name="list3">3rd List</string>
    <string name="myentries">My Entries</string>
    <string name="MyEntries">Your list was saved to My Entries.</string>
    <string name="example1">Take a walk</string>
    <string name="example2">Drink water</string>
    <string name="example3">Read a book</string>
    <string name="emptytoast">Please fill in each entry then press save</string>
    <string name="save">Save</string>
    <string name="reminder">Reminder</string>
    <string name="inputhint">Type out your pros and cons</string>
    <string name="cons">Cons</string>
    <string name="prosncons">&#160;Pros and Cons&#160;</string>
    <string name="pastentries">Entries</string>
    <string name="save1">New</string>
    <string name="setTitle">Set the title</string>
    <string name="gratitude">Gratitude</string>
    <string name="gratitude_input_text">Enter things you are grateful for one at a time</string>
    <string name="language">Español</string>
    <string name="prosncons_text">"Click on the \"+\" button to create and title a new list. Then type out any pros and cons one at a time and select the corresponding button to the right. Long press on any entry or list if you would like to delete. Also known as a cost benefit analysis; use this tool to decide whether or not to use and to make logical decisions. For example you can write out the pros and cons of doing and not doing something. "</string>
    <string name="abcdesavedata_text">View your entries here. Long press to delete your entries.</string>
    <string name="proexample1">Exercise can increase energy.</string>
    <string name="proexample2">Exercise is good for your health.</string>
    <string name="proexample3">Exercise makes you stronger.</string>
    <string name="conexample1">Exercise can make you sore.</string>
    <string name="MainActivity_text">Dialectical behavioral therapy has been extensively researched and proven to be an effective treatment for a wide range of mental health conditions. Many randomized controlled trials and other rigorous studies have supported its efficacy.</string>
    <string name="MainActivity_backbutton">Please click BACK again to exit.</string>
    <string name="gratitude_text">"Also known as Hierarchy of Values. Use this list to prioritize what is important. "</string>
    <string name="tools_text">Try using the Quickstart tool along with Pomodoro.\n\nUse activities from the ACCEPTS tool in Quickstart and in Cope Ahead.</string>
    <string name="emptytitle">Please enter a title</string>
    <string name="emptyinput_quickstart">Please enter an activity</string>
    <string name="emptycon">Please enter a con</string>
    <string name="emptypro">Please enter a pro</string>
    <string name="copeaheadbutton">&#160;Cope Ahead&#160;</string>
    <string name="step1">Describe the situation. Something that causes you to feel overwhelming emotion.</string>
    <string name="step1input">The situation:&#160;</string>
    <string name="step2">Choose a dbt skill, strategy or technique. Examples: mindfulness, reality testing, distraction, etc</string>
    <string name="step2input">The strategy:&#160;</string>
    <string name="step3">Rehearse. Imagine what you would do in this situation and how you would apply your strategy.</string>
    <string name="step3input">The practice:&#160;</string>
    <string name="CopeAheadSaveData_text">Use this page to rehearse. Remember to do something calming after. Long press to delete.</string>
    <string name="copeahead_text">Cope Ahead is a Dialectical Behavior Therapy that helps manage anxiety-provoking situations by rehearsing skills, strategies, and techniques and using them to handle potential stressors and situations effectively. \n\nExamples: \nReality Testing: Distinguishing between your thoughts and feelings from the external world. \nDistraction: The ACCEPTS tool or Thought Blocking</string>
    <string name="reminder1">Set a daily reminder to use ClearMind</string>


    <!--
        <string name="about1">Se puede leer en espanol si hace el cambio en su configuracion.<br></br>Made by Jeffrey </string>
    -->
</resources>