<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ABCDE">


    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/adView">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/activating" />

            <EditText
                android:id="@+id/activating1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundstyle"
                android:backgroundTint="@color/grey"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/activating_event"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/belief" />

            <EditText
                android:id="@+id/belief1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundstyle"
                android:backgroundTint="@color/grey"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/belief_about_event_irrational"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />


            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/consequence" />

            <EditText
                android:id="@+id/consequence1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundstyle"
                android:backgroundTint="@color/grey"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/consequence_of_irrational_belief"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/dispute" />

            <EditText
                android:id="@+id/dispute1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundstyle"
                android:backgroundTint="@color/grey"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/dispute_my_irrational_belief"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/effect" />

            <EditText
                android:id="@+id/effective1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundstyle"
                android:backgroundTint="@color/grey"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/effective_change_in_my_thinking"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
            <!--

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/abcdeexplanation" />
-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/savebutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/roundstyle"
                    android:backgroundTint="@color/purple_500"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:layout_marginStart="75dp"

                    />

                <Button
                    android:id="@+id/myEntries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/roundstyle"
                    android:backgroundTint="@color/purple_500"
                    android:text="@string/myentries"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toEndOf="@+id/savebutton"
                    android:layout_marginStart="20dp"
                    />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>








    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-7556369241256454/5710882905"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>