<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CopeAhead">


    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
<!--
        app:layout_constraintBottom_toTopOf="@id/adView"
-->

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">





            <TextView
                android:id="@+id/step1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/step1" />

            <EditText
                android:id="@+id/step1input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundstyle"
                android:backgroundTint="@color/grey"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/step1input"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <TextView
                android:id="@+id/step2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/step2" />

            <EditText
                android:id="@+id/step2input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundstyle"
                android:backgroundTint="@color/grey"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/step2input"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
            <TextView
                android:id="@+id/step3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/step3" />

            <EditText
                android:id="@+id/step3input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundstyle"
                android:backgroundTint="@color/grey"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/step3input"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/savebutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/roundstyle"
                    android:backgroundTint="@color/purple_500"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:layout_marginStart="75dp"

                    />

                <Button
                    android:id="@+id/myEntries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/roundstyle"
                    android:backgroundTint="@color/purple_500"
                    android:text="@string/myentries"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toEndOf="@+id/savebutton"
                    android:layout_marginStart="20dp"
                    />

            </LinearLayout>




        </LinearLayout>





    </ScrollView>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/banner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-7556369241256454/1793879697"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>